Made submit button on signup form large button. Fixed main wrap background image path.

--- a/css/form.css
+++ b/css/form.css
@@ -27,6 +27,7 @@ input:focus
 
 #signup .form-wrap {
 	max-width: 450px;
+	background: #ffffff;
 	width: 96%;
 	margin: 0 auto;
 	padding: 5%;
